用户登录注册, 获取用户列表有点问题
